solved fieldset overflow issue in mobile devices

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -483,6 +483,7 @@ footer {
   .contact-inner {
     &__box {
       display: flex;
+      flex-wrap: wrap;
 
       &__start {
         flex: 1;
@@ -509,20 +510,22 @@ footer {
           }
         }
       }
-
-      form {
-        flex: 2;
-      }
     }
   }
 }
 
 .contact-form {
+  flex: 2;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+
   fieldset {
     display: flex;
     flex-direction: column;
     gap: 1rem;
     border: none;
+    width: 100%;
   }
 
   &__bunk {
@@ -551,7 +554,7 @@ footer {
     outline: none;
     overflow: hidden;
     font-family: var(--font-sans-serif);
-    // background-color: #f1f1f1;
+    // background-color: #f1f1f1;fieldset
     // background-color: var(--gr);
   }
 
@@ -609,24 +612,9 @@ footer {
     }
   }
 
-  #contact {
-    .contact-inner {
-      &__box {
-        // border: solid 1px;
-        margin-top: -10px;
-        flex-direction: column;
-
-        &__start {
-          // padding: 0.5rem 0;
-          // border: solid 1px;
-          text-align: center;
-          padding-bottom: 1.5rem;
-        }
-      }
-    }
-  }
-
   .contact-form {
+    padding: 0 1rem;
+
     &__bunk {
       flex-direction: column;
     }
@@ -648,6 +636,19 @@ footer {
     &::before {
       height: 100%;
       width: 100%;
+    }
+  }
+
+  #contact {
+    .contact-inner {
+      &__box {
+        margin-top: -10px;
+
+        &__start {
+          text-align: center;
+          padding-bottom: 1.5rem;
+        }
+      }
     }
   }
 }
